feat: specify day or month when getting revenue
